css/style.css
/* ... */
.navbar-toggler:not(.collapsed) span:nth-child(2) {
  height: 12px;
  visibility: hidden;
  background-color: transparent;
}

.navbar-toggler:not(.collapsed) span:nth-child(3) {
  position: absolute;
  left: 12px;
  top: 10px;
  -webkit-transform: rotate(-135deg);
  transform: rotate(-135deg);
  opacity: 0.9;
}

/*======================================
//--//-->   INTRO
======================================*/

.intro {
  height: 100vh;
  position: relative;
  color: #fff;
}

.intro .intro-content {
  text-align: center;
  position: absolute;
}

.intro .overlay-itro {
  background-color: rgba(0, 0, 0, 0.6);
  position: absolute;
  top: 0;
  left: 0px;
  padding: 0;
  height: 100%;
  width: 100%;
  opacity: .9;
}

.intro .intro-title {
  color: #fff;
  font-weight: 600;
  font-size: 3rem;
}

.intro .intro-subtitle {
  font-size: 1.5rem;
  font-weight: 300;
}

.intro .text-slider-items {
  display: none;
}

.intro-single {
  height: 350px;
}

.intro-single .intro-content {
  margin-top: 30px;
}

.intro-single .intro-title {
  text-transform: uppercase;
  font-size: 3rem;
}

.intro-single .breadcrumb {
  background-color: transparent;
  color: #0078ff;
}

.intro-single .breadcrumb .breadcrumb-item:before {
  color: #cde1f8;
}

.intro-single .breadcrumb .breadcrumb-item.active {
  color: #cde1f8;
}

.intro-single .breadcrumb a {
  color: #fff;
}

/*======================================
//--//-->   ABOUT
======================================*/

.about-mf .box-shadow-full {
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.about-mf .about-img {
  margin-bottom: 2rem;
}

.about-mf .about-img img {
  margin-left: 10px;
  /* height: 700px; */
}

.ezclap{
  height: 700px;
  width: 300px !important;
}

.new11 {
  font-size: 0.9rem;
  font-weight: 300;
}

.project_img {
  /* height: 100%; */
  width: 100%;
}

.title_education {
  font-size: 3rem;
  font-weight: bold;
  text-transform: uppercase;
  color: white;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.education_title {
  font-size: 2rem;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.education_text {
  font-size: 1.5rem;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

#skills-section ul {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
}
#skills-section li {
  float: left;
  list-style-type: none;
  margin: 1em 2em;
  text-align: center;
}
#skills-section span {
  font-family: 'roboto', 'Helvetica';
  font-weight: bold;
  display: block;
}
#skills-section img {
  height: 70px;
}
#skills-section * {
  padding: 0;
}

.skill-mf span {
  color: #4e4e4e;
}

.skill-mf .progress {
  background-color: #cde1f8;
  margin: .5rem 0 1.2rem 0;
  border-radius: 0;
  height: .7rem;
}

.skill-mf .progress .progress-bar {
  height: .7rem;
  background-color: #0078ff;
}

/*======================================
//--//-->   SERVICES
======================================*/

.service-box {
  background-color: #fff;
  padding: 2.5rem 1.3rem;
  border-radius: 1rem;
  margin-bottom: 3rem;
}

.service-box:hover .ico-circle {
  transition: all 500ms ease;
  color: #fff;
  background-color: #0078ff;
  box-shadow: 0 0 0 10px #cde1f8;
}

.service-box .service-ico {
  margin-bottom: 1rem;
  color: #1e1e1e;
}

.service-box .ico-circle {
  transition: all 500ms ease;
  font-size: 4rem;
}

.service-box .s-title {
  font-size: 1.4rem;
  text-transform: uppercase;
  text-align: center;
  padding: .4rem 0;
}

.service-box .s-description {
  color: #4e4e4e;
}

/*======================================
//--//-->   COUNTER
======================================*/

.counter-box {
  color: #fff;
  text-align: center;
}

.counter-ico {
  margin-bottom: 1rem;
}

.counter-ico .ico-circle {
  height: 100px;
  width: 100px;
  line-height: 1.8;
  box-shadow: 0 0 0 4px black;
}

.counter-num .counter {
  font-size: 2rem;
  margin-bottom: 0;
}


/*======================================
//--//-->   New Projects Section
======================================*/


.tm-section-pad { padding: 60px; }
.tm-media { align-items: stretch; }

.tm-media-img {
    max-width: 140px;
    max-height: 140px;
}

.tm-media-img-ml-1 { margin-left: 80px; }
.tm-media-img-ml-2 { margin-left: 120px; }
.tm-media-img-ml-3 { margin-left: 160px; }
.tm-timeline-img-wrap { background: url(../img/connector.png) center repeat-x; height:5px; -webkit-tap-highlight-color: transparent;}

.tm-media-img .tm-media-img-ml-1  {
	transition: .3s ease transform;
}
.tm-media-img:hover {
	transform: scale(1.1);
}

.tm-media-body {
  border: 1px solid #ccc;
  padding: 17px 25px;
  max-width: 600px;
}


@media screen and (max-width: 991px) {
  .tm-text-section { padding: 65px 40px 75px; }
  .tm-text-section-pad-2 { padding: 40px 20px 55px; }
  .tm-media-img-ml-1 { margin-left: 40px; }
  .tm-media-img-ml-2 { margin-left: 60px; }
  .tm-media-img-ml-3 { margin-left: 80px; }
}

@media screen and (max-width: 550px) {
  .tm-text-section { padding: 35px 30px 40px; }
  .tm-media-img-ml-1 { margin-left: 30px; }
  .tm-media-img-ml-2 { margin-left: 45px; }
  .tm-media-img-ml-3 { margin-left: 60px; }
  .tm-media-body { margin-top: 20px; }
  .tm-media-body-ml-1 { margin-left: 30px; }
  .tm-media-body-ml-2 { margin-left: 45px; }
  .tm-media-body-ml-3 { margin-left: 60px; }
}
.mr-4, .mx-4 {
  margin-right: 1.5rem!important;
}
*, ::after, ::before {
  box-sizing: border-box;
}

.tm-container {
  width: 100%;
  margin: 0 auto;
  max-width: 1200px;
}

.tm-container-inner { background-color: rgb(255, 255, 255); }

.tm-text-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 65px 0 75px;
  margin-top: -50px;
}

.tm-text-section-pad-2 { padding: 65px 65px 75px; }

.tm-timelines-inner {
  border-left: 5px solid #ccc;
  position: relative;
  margin-left: 10px;
}
/* ... */

